--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
   },
   "dependencies": {
     "dotenv": "^16.0.0",
-    "pg": "^8.7.3"
+    "express": "^4.18.2",
+    "nodemon": "^3.0.3",
+    "pg": "^8.11.3",
+    "supertest": "^6.3.4"
   },
   "jest": {
     "setupFilesAfterEnv": [
