--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "husky": "^8.0.2",
     "jest": "^27.5.1",
     "jest-extended": "^2.0.0",
-    "jest-sorted": "^1.0.15",
-    "pg-format": "^1.0.4"
+    "jest-sorted": "^1.0.15"
   },
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
     "nodemon": "^3.0.3",
     "pg": "^8.11.3",
+    "pg-format": "^1.0.4",
     "supertest": "^6.3.4"
   },
   "jest": {
