--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jest-sorted": "^1.0.15"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
     "nodemon": "^3.0.3",
